--- a/public/public/style.css
+++ b/public/public/style.css
@@ -11,7 +11,7 @@ body {
 /* Header */
 header {
     background: #007bff;
-    color: black;
+    color: white;
     text-align: center;
     padding: 40px 20px;
 }
@@ -129,4 +129,7 @@ footer {
         margin: 10px 0;
     }
 }
+
+
+
 
